@@ -1,2 +1,7 @@
-Iain Holmes <iain@gnome.org>
-Brandon Hale <brandon@smarterits.com>
+Iain Holmes 
+E-mail: iain@gnome.org
+Userid: iain
+
+Brandon Hale 
+E-mail: brandon@smarterits.com>
+Userid: bhale
